--- a/source/spydersoft.Identity/Views/Account/Logout.cshtml
+++ b/source/spydersoft.Identity/Views/Account/Logout.cshtml
@@ -1,22 +1,36 @@
 ﻿@using spydersoft.Identity.Models.AccountViewModels
 @model LogoutViewModel
 
-<div class="logout-page">
-    <div class="page-header">
-        <h1>Logout</h1>
-    </div>
-
-    <div class="row">
-        <div class="col-sm-6">
-            <p>Would you like to logout of IdentityServer?</p>
-            <form asp-action="Logout">
-                <input type="hidden" name="logoutId" value="@Model.LogoutId"  />
-                <fieldset>
-                    <div class="form-group">
-                        <button class="btn btn-primary">Yes</button>
+<section class="signin-section">
+    <div class="container-fluid">
+        <div class="title-wrapper pt-30">
+            <div class="row align-items-center">
+                <div class="col-md-6">
+                    <div class="title mb-30">
+                        <h2>Sign out</h2>
                     </div>
-                </fieldset>
-            </form>
+                </div>
+                <!-- end col -->
+            </div>
+            <!-- end row -->
+        </div>
+
+        <div class="row g-0">
+            <div class="signin-wrapper">
+                <div class="form-wrapper">
+                    <p class="text-sm mb-25">
+                        Would you like to sign out?
+                    </p>
+                    <form asp-action="Logout">
+                        <input type="hidden" name="logoutId" value="@Model.LogoutId" />
+                        <fieldset>
+                            <div class="input-style-1">
+                                <button class="btn btn-primary">Yes</button>
+                            </div>
+                        </fieldset>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
-</div>
+</section>
