--- a/source/spydersoft.Identity/Views/Account/Register.cshtml
+++ b/source/spydersoft.Identity/Views/Account/Register.cshtml
@@ -2,52 +2,119 @@
 @{
     ViewData["Title"] = "Register";
 }
-
-<div class="row justify-content-center">
-    <div class="col-md-8">
-        <div class="card">
-            <div class="card-header">
-                <h3>@ViewData["Title"]</h3>
+<section class="signin-section">
+    <div class="container-fluid">
+        <!-- ========== title-wrapper start ========== -->
+        <div class="title-wrapper pt-30">
+            <div class="row align-items-center">
+                <div class="col-md-6">
+                    <div class="title mb-30">
+                        <h2>@ViewData["Title"]</h2>
+                    </div>
+                </div>
+                <!-- end col -->
             </div>
-
-            <div class="card-body">
-                <p class="text-muted">Create a new account</p>
-                <form asp-route-returnUrl="@ViewData["ReturnUrl"]" method="post">
-                    <div asp-validation-summary="All" class="text-danger"></div>
-                    <div class="input-group mb-3">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text"><i class="icon-user"></i></span>
-                        </div>
-                        <input asp-for="UserName" class="form-control" placeholder="User Name" />
-                        <span asp-validation-for="UserName" class="text-danger"></span>
-                    </div>
-                    <div class="input-group mb-3">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text">@@</span>
-                        </div>
-                        <input asp-for="Email" class="form-control" placeholder="Email" />
-                        <span asp-validation-for="Email" class="text-danger"></span>
-                    </div>
-                    <div class="input-group mb-3">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text"><i class="icon-lock"></i></span>
-                        </div>
-                        <input asp-for="Password" class="form-control" placeholder="Password" />
-                        <span asp-validation-for="Password" class="text-danger"></span>
-                    </div>
-                    <div class="input-group mb-3">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text"><i class="icon-lock"></i></span>
-                        </div>
-                        <input asp-for="ConfirmPassword" class="form-control" placeholder="Repeat password" />
-                        <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
-                    </div>
-                    <button type="submit" class="btn btn-success">Create Account</button>
-                </form>
-            </div>
+            <!-- end row -->
         </div>
+        <!-- ========== title-wrapper end ========== -->
+
+        <div class="row g-0 auth-row">
+            <div class="col-lg-6">
+                <div class="auth-cover-wrapper bg-primary-100">
+                    <div class="auth-cover">
+                        <div class="title text-center">
+                            <h1 class="text-primary mb-10">Get Started</h1>
+                            <p class="text-medium">
+                                Start creating the best possible user experience
+                                <br class="d-sm-block" />
+                                for you customers.
+                            </p>
+                        </div>
+                        <div class="cover-image">
+                            <img src="~/images/auth/signin-image.svg" alt="" />
+                        </div>
+                        <div class="shape-image">
+                            <img src="~/images/auth/shape.svg" alt="" />
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- end col -->
+            <div class="col-lg-6">
+                <div class="signup-wrapper">
+                    <div class="form-wrapper">
+                        <h6 class="mb-15">Sign Up Form</h6>
+                        <p class="text-sm mb-25">
+                            Start creating the best possible user experience for you
+                            customers.
+                        </p>
+                        <form action="#">
+                            <div class="row">
+                                <div class="col-12">
+                                    <div class="input-style-1">
+                                        <label>Name</label>
+                                        <input asp-for="UserName" class="form-control" placeholder="User Name" />
+                                        <span asp-validation-for="UserName" class="text-danger"></span>
+                                    </div>
+                                </div>
+                                <!-- end col -->
+                                <div class="col-12">
+                                    <div class="input-style-1">
+                                        <label>Email</label>
+                                        <input asp-for="Email" class="form-control" placeholder="Email" />
+                                        <span asp-validation-for="Email" class="text-danger"></span>
+                                    </div>
+                                </div>
+                                <!-- end col -->
+                                <div class="col-12">
+                                    <div class="input-style-1">
+                                        <label>Password</label>
+                                        <input asp-for="Password" class="form-control" placeholder="Password" />
+                                        <span asp-validation-for="Password" class="text-danger"></span>
+                                    </div>
+                                </div>
+                                <div class="col-12">
+                                    <div class="input-style-1">
+                                        <label>Confirm Password</label>
+                                        <input asp-for="ConfirmPassword" class="form-control" placeholder="Repeat password" />
+                                        <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+                                    </div>
+                                </div>
+                                <!-- end col -->
+                                <div class="col-12">
+                                    <div class="button-group d-flex justify-content-center flex-wrap">
+                                        <button class="main-btn primary-btn btn-hover w-100 text-center">
+                                            Create Account
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- end row -->
+                        </form>
+                        <div class="singup-option pt-40">
+                            <p class="text-sm text-medium text-center text-gray">
+                                Easy Sign Up With
+                            </p>
+                            <div class="button-group pt-40 pb-40 d-flex justify-content-center flex-wrap">
+                                <button class="main-btn danger-btn-outline m-2">
+                                    <i class="lni lni-google mr-10"></i>
+                                    Google
+                                </button>
+                            </div>
+                            <p class="text-sm text-medium text-dark text-center">
+                                Already have an account? <a asp-area="" asp-controller="Account" asp-action="Login">Sign In</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- end col -->
+        </div>
+        <!-- end row -->
     </div>
-</div>
+</section>
+
+
 @section Scripts {
     @await Html.PartialAsync("_ValidationScriptsPartial")
 }
